@@ -1,3 +1,8 @@
+2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/misc.c (gnat_init): Remove second argument in call to
+	build_common_tree_nodes.
+
 2010-04-18  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* gsocket.h: Make sure that winsock2.h is included before windows.h.
